--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nicolas Riquelme",
@@ -21,6 +21,7 @@
     "@aws-sdk/s3-request-presigner": "^3.414.0",
     "@aws-sdk/url-parser": "^3.374.0",
     "@aws-sdk/util-format-url": "^3.413.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -28,6 +29,7 @@
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "node-fetch": "2.7.0",
+    "nodemon": "^3.0.3",
     "path": "^0.12.7",
     "stripe": "^12.18.0",
     "swagger-jsdoc": "^6.2.8",
